--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/http-foundation": "^5.4",
         "symfony/serializer": "^5.4",
         "symfony/string": "^5.4",
-        "symfony/http-kernel": "^5.4"
+        "symfony/http-kernel": "^5.4",
+        "symfony/mime": "^5.4"
     },
     "autoload": {
         "psr-4": {
