--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "symfony/serializer": "^5.4",
         "symfony/string": "^5.4",
         "symfony/http-kernel": "^5.4",
-        "symfony/mime": "^5.4"
+        "symfony/mime": "^5.4",
+        "doctrine/annotations": "^1.13",
+        "doctrine/common": "^3.3"
     },
     "autoload": {
         "psr-4": {
